--- a/index.html
+++ b/index.html
@@ -2,12 +2,20 @@
 <html>
     <head>
         <meta charset="UTF-8">
-
+<img src="aziz2.jpg" height="200">
+<h1>aziz</h1>
         <title>aziz</title>
     </head>
     <body>
-        <h1>mekka</h1>
+        <h1>bijzondere eigenschappen:</h1>
+        <h2>geduld</h2>
+        <h3>rustig</h3>
+        <h4>sociaal </h4>
         
+<h1>waroom heb ik dit oplieding gekozen</h1>
+<h2>want ik vind het hele mooi oplieding en ik hou van programmeren </h2>
+
+    <a href="https://github.com/azi4zz">mijn github </a>
     </body>
 
 </html>
